--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "babel-plugin-macros": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "suspend-react": "^0.0.8",
     "three": "^0.138.3",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "babel-plugin-glsl": "1.0.0",
+    "babel-plugin-macros": "3.1.0",
+    "glsl-curl-noise2": "0.0.4",
+    "glsl-noise": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
