--- a/package.json
+++ b/package.json
@@ -5,28 +5,29 @@
   "private": false,
   "homepage": "http://lazygeekpanda.github.io/audio-visualizer-js",
   "dependencies": {
-    "@react-three/drei": "^8.18.10",
-    "@react-three/fiber": "^7.0.26",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "@react-three/drei": "^9.5.3",
+    "@react-three/fiber": "^8.0.12",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.42",
-    "@types/react-dom": "^17.0.14",
-    "babel-plugin-macros": "^3.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "suspend-react": "^0.0.8",
-    "three": "^0.138.3",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4",
+    "@types/node": "^17.0.27",
+    "@types/react": "^18.0.7",
+    "@types/react-dom": "^18.0.0",
     "babel-plugin-glsl": "1.0.0",
     "babel-plugin-macros": "3.1.0",
     "glsl-curl-noise2": "0.0.4",
-    "glsl-noise": "0.0.0"
+    "glsl-noise": "0.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "suspend-react": "^0.0.8",
+    "three": "^0.139.2",
+    "three-custom-shader-material": "^3.3.2",
+    "three-stdlib": "^2.10.0",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,8 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.24",
-    "@types/three": "^0.138.0",
+    "@types/styled-components": "^5.1.25",
+    "@types/three": "^0.139.0",
     "gh-pages": "^3.2.3"
   }
 }
