--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.4.4",
     "styled-components": "^5.3.5",
     "suspend-react": "^0.0.8",
     "three": "^0.139.2",
